--- a/kulstera_test.ipynb
+++ b/kulstera_test.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "kulstera_test.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM7yuBQMD1kkRQFhIgBdw9a",
+      "authorship_tag": "ABX9TyOjtP/5bMkSvYcdw6sq5Mh4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mtRtGVaFK1gO",
-        "outputId": "f0e1e700-ec77-46fe-8205-176c26da7539"
+        "outputId": "aae99532-26b2-4810-94d7-93ec138e2e42"
       },
       "source": [
         "import pandas as pd\n",
@@ -42,7 +42,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -64,7 +64,7 @@
         "e.drop(columns = ['Unnamed: 0'], inplace = True)\n",
         "v.drop(columns = ['Unnamed: 0'], inplace = True )"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -75,12 +75,12 @@
           "height": 204
         },
         "id": "XECbnr--LUSd",
-        "outputId": "e6000f92-244a-49c8-8be2-40efdfa6f821"
+        "outputId": "a2413de6-49b7-41d5-cae7-c30312f11b73"
       },
       "source": [
         "e.head()"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -188,7 +188,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 8
+          "execution_count": 4
         }
       ]
     },
@@ -200,12 +200,12 @@
           "height": 204
         },
         "id": "je_D8P4nLYP4",
-        "outputId": "d46ad030-7fb7-4d8a-b70d-0732dfbbf290"
+        "outputId": "ec2f7924-3434-438c-f7ec-b1841ee2e5af"
       },
       "source": [
         "v.head()"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -307,7 +307,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 9
+          "execution_count": 5
         }
       ]
     },
@@ -322,6 +322,151 @@
         "#Comprobar si los meses en ambos datasets son los mismos\n",
         "#Qué sucursal es la más visitada y en qué día ocurre el mayor número de visitas \n",
         "#Qué sucursal tiene mayor permanencia por día"
+      ],
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 221
+        },
+        "id": "O4XH4HAqv8ZQ",
+        "outputId": "f01344c5-e610-47cc-c1ee-a6d3515b8d6c"
+      },
+      "source": [
+        "v_e = pd.merge(v,e[['device_mac', 'visitor']], on = 'device_mac', how = 'left')\n",
+        "print(e.shape, v.shape, v_e.shape)\n",
+        "v_e.head()"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "(249556, 8) (90000, 7) (2201331, 8)\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>device_mac</th>\n",
+              "      <th>branch_office</th>\n",
+              "      <th>month_tz</th>\n",
+              "      <th>day_tz</th>\n",
+              "      <th>day_of_week_tz</th>\n",
+              "      <th>hour_tz</th>\n",
+              "      <th>tiempodeses</th>\n",
+              "      <th>visitor</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>a8:81:95:56:31:3c</td>\n",
+              "      <td>1</td>\n",
+              "      <td>11</td>\n",
+              "      <td>17</td>\n",
+              "      <td>Thursday</td>\n",
+              "      <td>4</td>\n",
+              "      <td>0</td>\n",
+              "      <td>False</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>44:6e:e5:1b:68:81</td>\n",
+              "      <td>3</td>\n",
+              "      <td>11</td>\n",
+              "      <td>3</td>\n",
+              "      <td>Thursday</td>\n",
+              "      <td>22</td>\n",
+              "      <td>477</td>\n",
+              "      <td>False</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>44:6e:e5:1b:68:81</td>\n",
+              "      <td>3</td>\n",
+              "      <td>11</td>\n",
+              "      <td>3</td>\n",
+              "      <td>Thursday</td>\n",
+              "      <td>22</td>\n",
+              "      <td>477</td>\n",
+              "      <td>False</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>44:6e:e5:1b:68:81</td>\n",
+              "      <td>3</td>\n",
+              "      <td>11</td>\n",
+              "      <td>3</td>\n",
+              "      <td>Thursday</td>\n",
+              "      <td>22</td>\n",
+              "      <td>477</td>\n",
+              "      <td>True</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>44:6e:e5:1b:68:81</td>\n",
+              "      <td>3</td>\n",
+              "      <td>11</td>\n",
+              "      <td>3</td>\n",
+              "      <td>Thursday</td>\n",
+              "      <td>22</td>\n",
+              "      <td>477</td>\n",
+              "      <td>True</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "          device_mac  branch_office  month_tz  ...  hour_tz tiempodeses  visitor\n",
+              "0  a8:81:95:56:31:3c              1        11  ...        4           0    False\n",
+              "1  44:6e:e5:1b:68:81              3        11  ...       22         477    False\n",
+              "2  44:6e:e5:1b:68:81              3        11  ...       22         477    False\n",
+              "3  44:6e:e5:1b:68:81              3        11  ...       22         477     True\n",
+              "4  44:6e:e5:1b:68:81              3        11  ...       22         477     True\n",
+              "\n",
+              "[5 rows x 8 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "QEgTEdvQwWce"
+      },
+      "source": [
+        ""
       ],
       "execution_count": null,
       "outputs": []
