Creado mediante Colaboratory

--- a/Challenge_20_04_21.ipynb
+++ b/Challenge_20_04_21.ipynb
@@ -20,7 +20,7 @@
       "version": "3.8.5"
     },
     "colab": {
-      "name": "Challenge.ipynb",
+      "name": "Challenge_20_04_21.ipynb",
       "provenance": [],
       "include_colab_link": true
     }
@@ -113,25 +113,41 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "jmHV5bEox3Rx"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jmHV5bEox3Rx",
+        "outputId": "e3d7f8ef-fdce-4e1e-a992-d7195b1fc6d9"
       },
       "source": [
-        "numbers = []\n",
-        "strings = []\n",
         "names = [\"John\", \"Eric\", \"Jessica\"]\n",
         "\n",
-        "# Escribe tu código aquí\n",
-        "second_name = None\n",
-        "\n",
+        "num = [1,2,3]\n",
+        "second_name = names[1]\n",
+        "words = ['hola', 'mundo']\n",
+        "numbers = [i for i in num]\n",
+        "strings = [i for i in words]\n",
         "\n",
         "# this code should write out the filled arrays and the second name in the names list (Eric).\n",
         "# El siguiente código \n",
-        "print(numbers)\n",
-        "print(strings)\n",
+        "print('Lista de números: \\n\\t', numbers)\n",
+        "print('Lista de strings: \\n\\t', strings)\n",
         "print(\"The second name on the names list is %s\" % second_name)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Lista de números: \n",
+            "\t [1, 2, 3]\n",
+            "Lista de strings: \n",
+            "\t ['hola', 'mundo']\n",
+            "The second name on the names list is Eric\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
