Creado mediante Colaboratory

--- a/Challenge_20_04_21.ipynb
+++ b/Challenge_20_04_21.ipynb
@@ -170,16 +170,21 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "aZGw9DNcx3Ry"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "aZGw9DNcx3Ry",
+        "outputId": "f548a6f9-1f66-4b06-ee83-a38cdffd84fe"
       },
       "source": [
-        "x = object()\n",
-        "y = object()\n",
+        "x = [i for i in range(10,50)]\n",
+        "y = [i for i in range(22,40)]\n",
         "\n",
+        "N = 10\n",
         "# TODO: change this code\n",
-        "x_list = [x]\n",
-        "y_list = [y]\n",
-        "big_list = []\n",
+        "x_list = [e for e in range(0,N) ]\n",
+        "y_list = [j for j in range(0,N)]\n",
+        "big_list = x_list*10 + y_list*10\n",
         "\n",
         "print(\"x_list contains %d objects\" % len(x_list))\n",
         "print(\"y_list contains %d objects\" % len(y_list))\n",
@@ -191,8 +196,18 @@
         "if big_list.count(x) == 10 and big_list.count(y) == 10:\n",
         "    print(\"Great!\")"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "x_list contains 10 objects\n",
+            "y_list contains 10 objects\n",
+            "big_list contains 200 objects\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
