Creado mediante Colaboratory

--- a/Challenge_20_04_21.ipynb
+++ b/Challenge_20_04_21.ipynb
@@ -243,16 +243,29 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "-x1-5Xjfx3Rz"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-x1-5Xjfx3Rz",
+        "outputId": "8f3791eb-41c1-460e-ed84-2ea5e310456b"
       },
       "source": [
         "data = (\"John\", \"Doe\", 53.44)\n",
         "format_string = \"Hello\"\n",
         "\n",
-        "print(format_string % data)"
+        "print('El resultado debe ser: \\n\\t {} {} {}. Tu saldo actual es {} '.format(format_string, data[0], data[1], data[-1]) )"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "El resultado debe ser: \n",
+            "\t Hello John Doe. Tu saldo actual es 53.44 \n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
