--- a/Challenge_20_04_21.ipynb
+++ b/Challenge_20_04_21.ipynb
@@ -288,14 +288,18 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "aC29bgxKx3R1"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "aC29bgxKx3R1",
+        "outputId": "61f5129e-cacc-4b36-d7a1-6d7bf8dcedbd"
       },
       "source": [
         "# Cambia este código\n",
-        "number = 10\n",
+        "number = 20\n",
         "second_number = 10\n",
-        "first_array = []\n",
-        "second_array = [1,2,3]\n",
+        "first_array = [1]\n",
+        "second_array = [1,2]\n",
         "\n",
         "if number > 15:\n",
         "    print(\"1\")\n",
@@ -315,8 +319,19 @@
         "if not second_number:\n",
         "    print(\"6\")"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1\n",
+            "2\n",
+            "3\n",
+            "5\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -339,7 +354,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "G3rMG5wmx3R1"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "G3rMG5wmx3R1",
+        "outputId": "3832adb8-18d2-40e1-9e1f-287b4f466e57"
       },
       "source": [
         "numbers = [\n",
@@ -352,10 +371,119 @@
         "    743, 527\n",
         "]\n",
         "\n",
-        "# Tu código aquí"
+        "# Tu código aquí\n",
+        "for valor in range(len(numbers)):\n",
+        "  print(valor)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0\n",
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n",
+            "5\n",
+            "6\n",
+            "7\n",
+            "8\n",
+            "9\n",
+            "10\n",
+            "11\n",
+            "12\n",
+            "13\n",
+            "14\n",
+            "15\n",
+            "16\n",
+            "17\n",
+            "18\n",
+            "19\n",
+            "20\n",
+            "21\n",
+            "22\n",
+            "23\n",
+            "24\n",
+            "25\n",
+            "26\n",
+            "27\n",
+            "28\n",
+            "29\n",
+            "30\n",
+            "31\n",
+            "32\n",
+            "33\n",
+            "34\n",
+            "35\n",
+            "36\n",
+            "37\n",
+            "38\n",
+            "39\n",
+            "40\n",
+            "41\n",
+            "42\n",
+            "43\n",
+            "44\n",
+            "45\n",
+            "46\n",
+            "47\n",
+            "48\n",
+            "49\n",
+            "50\n",
+            "51\n",
+            "52\n",
+            "53\n",
+            "54\n",
+            "55\n",
+            "56\n",
+            "57\n",
+            "58\n",
+            "59\n",
+            "60\n",
+            "61\n",
+            "62\n",
+            "63\n",
+            "64\n",
+            "65\n",
+            "66\n",
+            "67\n",
+            "68\n",
+            "69\n",
+            "70\n",
+            "71\n",
+            "72\n",
+            "73\n",
+            "74\n",
+            "75\n",
+            "76\n",
+            "77\n",
+            "78\n",
+            "79\n",
+            "80\n",
+            "81\n",
+            "82\n",
+            "83\n",
+            "84\n",
+            "85\n",
+            "86\n",
+            "87\n",
+            "88\n",
+            "89\n",
+            "90\n",
+            "91\n",
+            "92\n",
+            "93\n",
+            "94\n",
+            "95\n",
+            "96\n",
+            "97\n",
+            "98\n",
+            "99\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
