Creado mediante Colaboratory

--- a/Challenge_20_04_21.ipynb
+++ b/Challenge_20_04_21.ipynb
@@ -61,7 +61,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_VZJobUzx3Rw",
-        "outputId": "19bc78b5-f9a2-46a5-8130-20547cfed148"
+        "outputId": "9540d219-0aef-464d-b413-fa7cfaf97898"
       },
       "source": [
         "mystring = 'Ésta variable es una cadena: HOLA'\n",
@@ -74,7 +74,7 @@
         "print('La variable tipo float: \\n\\t', myfloat)\n",
         "print('La variable tipo int: \\n\\t', myint)"
       ],
-      "execution_count": 3,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -117,7 +117,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jmHV5bEox3Rx",
-        "outputId": "e3d7f8ef-fdce-4e1e-a992-d7195b1fc6d9"
+        "outputId": "5c4013f7-4b6d-4c0c-dd52-a2d5e906c301"
       },
       "source": [
         "names = [\"John\", \"Eric\", \"Jessica\"]\n",
@@ -134,7 +134,7 @@
         "print('Lista de strings: \\n\\t', strings)\n",
         "print(\"The second name on the names list is %s\" % second_name)"
       ],
-      "execution_count": 5,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -174,7 +174,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "aZGw9DNcx3Ry",
-        "outputId": "f548a6f9-1f66-4b06-ee83-a38cdffd84fe"
+        "outputId": "8ed77ca2-27f8-45cb-c306-19fb1979cd9b"
       },
       "source": [
         "x = [i for i in range(10,50)]\n",
@@ -196,7 +196,7 @@
         "if big_list.count(x) == 10 and big_list.count(y) == 10:\n",
         "    print(\"Great!\")"
       ],
-      "execution_count": 6,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -247,7 +247,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-x1-5Xjfx3Rz",
-        "outputId": "8f3791eb-41c1-460e-ed84-2ea5e310456b"
+        "outputId": "ec9a991f-bb2f-40bd-d1b7-4c585d069804"
       },
       "source": [
         "data = (\"John\", \"Doe\", 53.44)\n",
@@ -255,7 +255,7 @@
         "\n",
         "print('El resultado debe ser: \\n\\t {} {} {}. Tu saldo actual es {} '.format(format_string, data[0], data[1], data[-1]) )"
       ],
-      "execution_count": 8,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -292,7 +292,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "aC29bgxKx3R1",
-        "outputId": "61f5129e-cacc-4b36-d7a1-6d7bf8dcedbd"
+        "outputId": "bd199e93-5779-41a8-df20-7e97bbd7f655"
       },
       "source": [
         "# Cambia este código\n",
@@ -319,7 +319,7 @@
         "if not second_number:\n",
         "    print(\"6\")"
       ],
-      "execution_count": 9,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -358,7 +358,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "G3rMG5wmx3R1",
-        "outputId": "3832adb8-18d2-40e1-9e1f-287b4f466e57"
+        "outputId": "c46b874d-4803-42b7-e2d1-a9745551c7e1"
       },
       "source": [
         "numbers = [\n",
@@ -372,114 +372,40 @@
         "]\n",
         "\n",
         "# Tu código aquí\n",
-        "for valor in range(len(numbers)):\n",
-        "  print(valor)"
+        "for valor in numbers:\n",
+        "  if valor % 2 == 0:    \n",
+        "    print(valor)\n",
+        "  elif valor == 237:\n",
+        "      break\n",
+        "      "
       ],
-      "execution_count": 11,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "0\n",
-            "1\n",
-            "2\n",
-            "3\n",
-            "4\n",
-            "5\n",
-            "6\n",
-            "7\n",
-            "8\n",
-            "9\n",
-            "10\n",
-            "11\n",
-            "12\n",
-            "13\n",
-            "14\n",
-            "15\n",
-            "16\n",
-            "17\n",
-            "18\n",
-            "19\n",
-            "20\n",
-            "21\n",
-            "22\n",
-            "23\n",
-            "24\n",
-            "25\n",
-            "26\n",
-            "27\n",
-            "28\n",
-            "29\n",
-            "30\n",
-            "31\n",
-            "32\n",
-            "33\n",
-            "34\n",
-            "35\n",
-            "36\n",
-            "37\n",
-            "38\n",
-            "39\n",
-            "40\n",
-            "41\n",
-            "42\n",
-            "43\n",
-            "44\n",
-            "45\n",
-            "46\n",
-            "47\n",
-            "48\n",
-            "49\n",
-            "50\n",
-            "51\n",
-            "52\n",
-            "53\n",
-            "54\n",
-            "55\n",
-            "56\n",
-            "57\n",
-            "58\n",
-            "59\n",
-            "60\n",
-            "61\n",
-            "62\n",
-            "63\n",
-            "64\n",
-            "65\n",
-            "66\n",
-            "67\n",
-            "68\n",
-            "69\n",
-            "70\n",
-            "71\n",
-            "72\n",
-            "73\n",
-            "74\n",
-            "75\n",
-            "76\n",
-            "77\n",
-            "78\n",
-            "79\n",
-            "80\n",
-            "81\n",
-            "82\n",
-            "83\n",
-            "84\n",
-            "85\n",
-            "86\n",
-            "87\n",
-            "88\n",
-            "89\n",
-            "90\n",
-            "91\n",
-            "92\n",
-            "93\n",
-            "94\n",
-            "95\n",
-            "96\n",
-            "97\n",
-            "98\n",
-            "99\n"
+            "402\n",
+            "984\n",
+            "360\n",
+            "408\n",
+            "980\n",
+            "544\n",
+            "390\n",
+            "984\n",
+            "592\n",
+            "236\n",
+            "942\n",
+            "386\n",
+            "462\n",
+            "418\n",
+            "344\n",
+            "236\n",
+            "566\n",
+            "978\n",
+            "328\n",
+            "162\n",
+            "758\n",
+            "918\n"
           ],
           "name": "stdout"
         }
