Creado mediante Colaboratory

--- a/Challenge_20_04_21.ipynb
+++ b/Challenge_20_04_21.ipynb
@@ -61,7 +61,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_VZJobUzx3Rw",
-        "outputId": "9540d219-0aef-464d-b413-fa7cfaf97898"
+        "outputId": "91cefa1c-7d8e-41cc-e2d0-8b081302e6b3"
       },
       "source": [
         "mystring = 'Ésta variable es una cadena: HOLA'\n",
@@ -117,7 +117,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jmHV5bEox3Rx",
-        "outputId": "5c4013f7-4b6d-4c0c-dd52-a2d5e906c301"
+        "outputId": "edd8c43a-c270-42bd-b9eb-6d042cd4ff22"
       },
       "source": [
         "names = [\"John\", \"Eric\", \"Jessica\"]\n",
@@ -174,7 +174,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "aZGw9DNcx3Ry",
-        "outputId": "8ed77ca2-27f8-45cb-c306-19fb1979cd9b"
+        "outputId": "e3209ec4-f118-4cb3-8599-7969aaffcece"
       },
       "source": [
         "x = [i for i in range(10,50)]\n",
@@ -247,7 +247,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-x1-5Xjfx3Rz",
-        "outputId": "ec9a991f-bb2f-40bd-d1b7-4c585d069804"
+        "outputId": "0921969e-0aa5-41f2-8a63-75a7753b5196"
       },
       "source": [
         "data = (\"John\", \"Doe\", 53.44)\n",
@@ -292,7 +292,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "aC29bgxKx3R1",
-        "outputId": "bd199e93-5779-41a8-df20-7e97bbd7f655"
+        "outputId": "307d6d05-62e4-4237-ad85-1520e6009c1e"
       },
       "source": [
         "# Cambia este código\n",
@@ -358,7 +358,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "G3rMG5wmx3R1",
-        "outputId": "c46b874d-4803-42b7-e2d1-a9745551c7e1"
+        "outputId": "87b4b128-6240-4438-924b-f3f1e196c81e"
       },
       "source": [
         "numbers = [\n",
@@ -435,24 +435,48 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "aQtAgLmVx3R2"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "aQtAgLmVx3R2",
+        "outputId": "4d8f32e1-7496-4233-c89a-072e6b2a5fac"
       },
       "source": [
         "# Modifica esta función para devolver una lista de cadenas de texto (las del punto 1)\n",
+        "\n",
         "def list_benefits():\n",
-        "    pass\n",
+        "    list_benefits = [\"Código más organizado\",\"Código más legible\",\"Reutilización de código más fácil\",\"Permitir a los programadores compartir y conectar código juntos\"]\n",
+        "    return list_benefits \n",
         "\n",
         "# Modify this function to concatenate to each benefit - \" is a benefit of functions!\"\n",
         "# Modifica esta función para concatenar a cada benefit (la cadena de texto) \" es un beneficio de las funciones!\"\n",
         "def build_sentence(benefit):\n",
-        "    pass\n",
+        "  for i in list_benefits():\n",
+        "    print(i +' '+ benefit) \n",
         "\n",
-        "def name_the_benefits_of_functions():\n",
-        "    list_of_benefits = list_benefits()\n",
-        "    for benefit in list_of_benefits:\n",
-        "        print(build_sentence(benefit))\n",
-        "\n",
-        "name_the_benefits_of_functions()"
+        "build_sentence(\"¡es un beneficio de las funciones!\")"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Código más organizado ¡es un beneficio de las funciones!\n",
+            "Código más legible ¡es un beneficio de las funciones!\n",
+            "Reutilización de código más fácil ¡es un beneficio de las funciones!\n",
+            "Permitir a los programadores compartir y conectar código juntos ¡es un beneficio de las funciones!\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "uLIGi1iaR1Zq"
+      },
+      "source": [
+        ""
       ],
       "execution_count": null,
       "outputs": []
