Creado mediante Colaboratory

--- a/Challenge_20_04_21.ipynb
+++ b/Challenge_20_04_21.ipynb
@@ -61,7 +61,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_VZJobUzx3Rw",
-        "outputId": "91cefa1c-7d8e-41cc-e2d0-8b081302e6b3"
+        "outputId": "41c55fdf-cb27-42bd-ca12-91dab9d0523d"
       },
       "source": [
         "mystring = 'Ésta variable es una cadena: HOLA'\n",
@@ -117,7 +117,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jmHV5bEox3Rx",
-        "outputId": "edd8c43a-c270-42bd-b9eb-6d042cd4ff22"
+        "outputId": "49e3b6e8-93c7-4a6b-937e-b8b0e182a78a"
       },
       "source": [
         "names = [\"John\", \"Eric\", \"Jessica\"]\n",
@@ -174,7 +174,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "aZGw9DNcx3Ry",
-        "outputId": "e3209ec4-f118-4cb3-8599-7969aaffcece"
+        "outputId": "aef839b5-0854-4181-8905-068ca4a972c5"
       },
       "source": [
         "x = [i for i in range(10,50)]\n",
@@ -247,7 +247,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-x1-5Xjfx3Rz",
-        "outputId": "0921969e-0aa5-41f2-8a63-75a7753b5196"
+        "outputId": "73071301-4b79-4f72-888e-f6687be523ff"
       },
       "source": [
         "data = (\"John\", \"Doe\", 53.44)\n",
@@ -292,13 +292,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "aC29bgxKx3R1",
-        "outputId": "307d6d05-62e4-4237-ad85-1520e6009c1e"
+        "outputId": "70a14e37-bef4-4828-898d-62f66a6bff48"
       },
       "source": [
         "# Cambia este código\n",
         "number = 20\n",
-        "second_number = 10\n",
-        "first_array = [1]\n",
+        "second_number = []\n",
+        "first_array = [1,0,0]\n",
         "second_array = [1,2]\n",
         "\n",
         "if number > 15:\n",
@@ -327,7 +327,9 @@
             "1\n",
             "2\n",
             "3\n",
-            "5\n"
+            "4\n",
+            "5\n",
+            "6\n"
           ],
           "name": "stdout"
         }
@@ -358,7 +360,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "G3rMG5wmx3R1",
-        "outputId": "87b4b128-6240-4438-924b-f3f1e196c81e"
+        "outputId": "cb56350e-966c-49d8-fa64-5c4a5f16b3d5"
       },
       "source": [
         "numbers = [\n",
@@ -439,7 +441,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "aQtAgLmVx3R2",
-        "outputId": "4d8f32e1-7496-4233-c89a-072e6b2a5fac"
+        "outputId": "f974b4bf-69e7-4ba8-f684-88dc80ae039c"
       },
       "source": [
         "# Modifica esta función para devolver una lista de cadenas de texto (las del punto 1)\n",
@@ -478,7 +480,7 @@
       "source": [
         ""
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     }
   ]
