--- a/DataVisualization.ipynb
+++ b/DataVisualization.ipynb
@@ -15,6 +15,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Loading iris data\n",
+    "iris = sns.load_dataset('iris')\n",
+    "dgp = pd.read_csv('./gapminder.csv')\n",
+    "flights = sns.load_dataset('flights')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
