--- a/TKandDLwoPhD.ipynb
+++ b/TKandDLwoPhD.ipynb
@@ -80,10 +80,59 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running on GPU\n",
+      "Number of Accelerators:  1\n"
+     ]
+    }
+   ],
+   "source": [
+    "####-------Accelerators-------####\n",
+    "# Detect hardware\n",
+    "try: \n",
+    "    tpu = tf.distribute.cluster_resolver.TPUClusterResolver() # TPU detection\n",
+    "except:\n",
+    "    tpu = None\n",
+    "    gpus = tf.config.experimental.list_logical_devices(\"GPU\")\n",
+    "# select appropiate distribution strategy for hardware\n",
+    "if tpu:\n",
+    "    tf.config.experimental_connect_to_cluster(tpu)\n",
+    "    tf.tpu.experimental.initialize_tpu_system(tpu)\n",
+    "    strategy = tf.distribute.experimental.TPUStrategy(tpu)\n",
+    "    print('Running on TPU ', tpu.master())\n",
+    "elif len(gpus) > 0:\n",
+    "    strategy = tf.distribute.MirroredStrategy(gpus) # this works from 1 to multiple gpus\n",
+    "    print('Running on ', len(gpus), 'GPUs' )\n",
+    "else:\n",
+    "    strategy = tf.distribute.get_strategy() # default strategy that works on CPU and single GPU\n",
+    "    print('Running on GPU')\n",
+    "    \n",
+    "\n",
+    "# How many accelerators do we have ? \n",
+    "print('Number of Accelerators: ', strategy.num_replicas_in_sync)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# To use the señected distribution strategy: \n",
+    "# Use:\n",
+    "# with strategy.scope:\n",
+    "#  #####------ define your keras model here -------#####\n",
+    "#\n",
+    "# For distributed computing, the batch size and learning rate need to be adjusted\n",
+    "# global batch size = BATCH_SIZE * strategy.replicas_in_sync # num replicas is 8 on a single TPU or N when running on N GPUs\n",
+    "# learning_rate = LEARNING_RATE * strategy.num_replicas_in_sync"
+   ]
   }
  ],
  "metadata": {
