Creado mediante Colaboratory

--- a/DigitRecognition.ipynb
+++ b/DigitRecognition.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "DigitRecognition.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOFBwAt+ELXSurHiB5ILTEV",
+      "authorship_tag": "ABX9TyN6ZG6sMcgf9peccXxEya4A",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -256,7 +256,98 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "RhOozFrRQTnk"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RhOozFrRQTnk",
+        "outputId": "f83a3add-9fca-40a0-a2b7-3f0a6dce0d61"
+      },
+      "source": [
+        "# Building a sequential model \n",
+        "model = Sequential()\n",
+        "model.add(Dense(512, activation = 'relu', input_shape=(784,)))\n",
+        "model.add(Dropout(.2)) # Dropping perceptron with 20% of probabilities or less\n",
+        "model.add(Dense(512, activation='relu'))\n",
+        "model.add(Dropout(.2)) # Dropping perceptron with 20% of probabilities or less\n",
+        "model.add(Dense(10, activation= 'softmax'))\n",
+        "model.summary()"
+      ],
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Model: \"sequential\"\n",
+            "_________________________________________________________________\n",
+            "Layer (type)                 Output Shape              Param #   \n",
+            "=================================================================\n",
+            "dense (Dense)                (None, 512)               401920    \n",
+            "_________________________________________________________________\n",
+            "dropout (Dropout)            (None, 512)               0         \n",
+            "_________________________________________________________________\n",
+            "dense_1 (Dense)              (None, 512)               262656    \n",
+            "_________________________________________________________________\n",
+            "dropout_1 (Dropout)          (None, 512)               0         \n",
+            "_________________________________________________________________\n",
+            "dense_2 (Dense)              (None, 10)                5130      \n",
+            "=================================================================\n",
+            "Total params: 669,706\n",
+            "Trainable params: 669,706\n",
+            "Non-trainable params: 0\n",
+            "_________________________________________________________________\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gqgXfjp8SOm2"
+      },
+      "source": [
+        "# Compile model with an optimizer and a loss function\n",
+        "model.compile(loss = 'categorical_crossentropy', \n",
+        "              optimizer = RMSprop(), \n",
+        "              metrics = ['accuracy'])"
+      ],
+      "execution_count": 19,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bqmDQlobSyyc",
+        "outputId": "8bb728e5-e598-4f41-a554-9428b6444188"
+      },
+      "source": [
+        "# Training model with specific batches, verbose and epochs\n",
+        "history = model.fit(x_train, y_train, batch_size=128, epochs= 3, \n",
+        "                    verbose= 1, validation_data= (x_test, y_test))"
+      ],
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Epoch 1/3\n",
+            "469/469 [==============================] - 22s 19ms/step - loss: 0.4396 - accuracy: 0.8610 - val_loss: 0.1093 - val_accuracy: 0.9676\n",
+            "Epoch 2/3\n",
+            "469/469 [==============================] - 9s 19ms/step - loss: 0.1049 - accuracy: 0.9682 - val_loss: 0.0781 - val_accuracy: 0.9758\n",
+            "Epoch 3/3\n",
+            "469/469 [==============================] - 9s 18ms/step - loss: 0.0777 - accuracy: 0.9763 - val_loss: 0.0737 - val_accuracy: 0.9779\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "T8B2aVLaTKeD"
       },
       "source": [
         ""
