--- a/Fashion_mnist_example.ipynb
+++ b/Fashion_mnist_example.ipynb
@@ -6,7 +6,7 @@
       "name": "Fashion_mnist_example.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOpspBYLwx3M/MtM7yYa0MB",
+      "authorship_tag": "ABX9TyN8RxQh0ZdRJdNMa04Y3BTq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -761,6 +761,326 @@
       "cell_type": "code",
       "metadata": {
         "id": "k9gJDOW3W0Hi"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 9,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "X3py4CzRYgcj"
+      },
+      "source": [
+        "# Exercise 6:\n",
+        "Consider the impact of training for more or less epochs. Why do you think that would be the case ? \n",
+        "\n",
+        "try 15 epochs - you'll probably get a model with a much better loss than the one with 5. try 30 epochs -- you might see the loss value stops decreasing, and sometimes increases. This is a side effect of something called 'overfitting' which you can learn about (somewhere) and it's something you need to keep an eye out for when training neural networks. There's no point in wasting you time training if you aren't improving your loss, right! "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "K4Y4CaIccb5t",
+        "outputId": "65c589d5-f1f9-4cc7-d8ae-fa534bbed05c"
+      },
+      "source": [
+        "mnist = tf.keras.datasets.mnist\n",
+        "\n",
+        "(training_images, training_labels), (test_images, test_labels) = mnist.load_data()\n",
+        "\n",
+        "training_images = training_images/255.0\n",
+        "test_images = test_images/255.0\n",
+        "\n",
+        "model = tf.keras.models.Sequential([\n",
+        "                                    tf.keras.layers.Flatten(), \n",
+        "                                    tf.keras.layers.Dense(128, activation=tf.nn.relu),\n",
+        "                                    tf.keras.layers.Dense(10,activation=tf.nn.softmax)\n",
+        "])\n",
+        "\n",
+        "model.compile(optimizer = 'adam', loss = 'sparse_categorical_crossentropy')\n",
+        "\n",
+        "model.fit(training_images, training_labels, epochs = 30)\n",
+        "\n",
+        "model.evaluate(test_images, test_labels)\n",
+        "\n",
+        "classifications = model.predict(test_images)\n",
+        "\n",
+        "print(classifications[0],'\\n',test_labels[0])"
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Epoch 1/30\n",
+            "1875/1875 [==============================] - 4s 2ms/step - loss: 0.2621\n",
+            "Epoch 2/30\n",
+            "1875/1875 [==============================] - 3s 2ms/step - loss: 0.1161\n",
+            "Epoch 3/30\n",
+            "1875/1875 [==============================] - 4s 2ms/step - loss: 0.0790\n",
+            "Epoch 4/30\n",
+            "1875/1875 [==============================] - 3s 2ms/step - loss: 0.0594\n",
+            "Epoch 5/30\n",
+            "1875/1875 [==============================] - 3s 2ms/step - loss: 0.0458\n",
+            "Epoch 6/30\n",
+            "1875/1875 [==============================] - 4s 2ms/step - loss: 0.0359\n",
+            "Epoch 7/30\n",
+            "1875/1875 [==============================] - 4s 2ms/step - loss: 0.0280\n",
+            "Epoch 8/30\n",
+            "1875/1875 [==============================] - 4s 2ms/step - loss: 0.0237\n",
+            "Epoch 9/30\n",
+            "1875/1875 [==============================] - 4s 2ms/step - loss: 0.0190\n",
+            "Epoch 10/30\n",
+            "1875/1875 [==============================] - 3s 2ms/step - loss: 0.0157\n",
+            "Epoch 11/30\n",
+            "1875/1875 [==============================] - 3s 2ms/step - loss: 0.0121\n",
+            "Epoch 12/30\n",
+            "1875/1875 [==============================] - 3s 2ms/step - loss: 0.0123\n",
+            "Epoch 13/30\n",
+            "1875/1875 [==============================] - 3s 2ms/step - loss: 0.0102\n",
+            "Epoch 14/30\n",
+            "1875/1875 [==============================] - 4s 2ms/step - loss: 0.0085\n",
+            "Epoch 15/30\n",
+            "1875/1875 [==============================] - 3s 2ms/step - loss: 0.0081\n",
+            "Epoch 16/30\n",
+            "1875/1875 [==============================] - 3s 2ms/step - loss: 0.0066\n",
+            "Epoch 17/30\n",
+            "1875/1875 [==============================] - 3s 2ms/step - loss: 0.0070\n",
+            "Epoch 18/30\n",
+            "1875/1875 [==============================] - 3s 2ms/step - loss: 0.0056\n",
+            "Epoch 19/30\n",
+            "1875/1875 [==============================] - 3s 2ms/step - loss: 0.0059\n",
+            "Epoch 20/30\n",
+            "1875/1875 [==============================] - 4s 2ms/step - loss: 0.0050\n",
+            "Epoch 21/30\n",
+            "1875/1875 [==============================] - 4s 2ms/step - loss: 0.0057\n",
+            "Epoch 22/30\n",
+            "1875/1875 [==============================] - 4s 2ms/step - loss: 0.0037\n",
+            "Epoch 23/30\n",
+            "1875/1875 [==============================] - 3s 2ms/step - loss: 0.0051\n",
+            "Epoch 24/30\n",
+            "1875/1875 [==============================] - 3s 2ms/step - loss: 0.0061\n",
+            "Epoch 25/30\n",
+            "1875/1875 [==============================] - 4s 2ms/step - loss: 0.0027\n",
+            "Epoch 26/30\n",
+            "1875/1875 [==============================] - 4s 2ms/step - loss: 0.0036\n",
+            "Epoch 27/30\n",
+            "1875/1875 [==============================] - 4s 2ms/step - loss: 0.0051\n",
+            "Epoch 28/30\n",
+            "1875/1875 [==============================] - 4s 2ms/step - loss: 0.0033\n",
+            "Epoch 29/30\n",
+            "1875/1875 [==============================] - 4s 2ms/step - loss: 0.0034\n",
+            "Epoch 30/30\n",
+            "1875/1875 [==============================] - 3s 2ms/step - loss: 0.0041\n",
+            "313/313 [==============================] - 0s 1ms/step - loss: 0.1157\n",
+            "[2.4076518e-20 4.8557118e-20 4.4123920e-15 5.8356778e-11 2.4243124e-22\n",
+            " 6.5721779e-18 2.2797329e-23 1.0000000e+00 1.4174653e-13 2.8273928e-10] \n",
+            " 7\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "bxbGeNhJhIw3"
+      },
+      "source": [
+        "# Exercise 7: \n",
+        "Before you trained, you normalized the data, going from values that were 0-255 to values that were 0-1. What would be the impact of removing that? Here's the complete code to give it a try. Why do you think you get different results ? "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HaoZ0BfXeH1x",
+        "outputId": "67d27fa5-8995-45a5-9146-a98ec3498e29"
+      },
+      "source": [
+        "mnist = tf.keras.datasets.mnist\n",
+        "\n",
+        "(training_images, training_labels), (test_images, test_labels) = mnist.load_data()\n",
+        "\n",
+        "#training_images = training_images/255.0\n",
+        "#test_images = test_images/255.0\n",
+        "\n",
+        "model = tf.keras.models.Sequential([\n",
+        "                                    tf.keras.layers.Flatten(), \n",
+        "                                    tf.keras.layers.Dense(128, activation=tf.nn.relu),\n",
+        "                                    tf.keras.layers.Dense(10,activation=tf.nn.softmax)\n",
+        "])\n",
+        "\n",
+        "model.compile(optimizer = 'adam', loss = 'sparse_categorical_crossentropy')\n",
+        "\n",
+        "model.fit(training_images, training_labels, epochs = 30)\n",
+        "\n",
+        "model.evaluate(test_images, test_labels)\n",
+        "\n",
+        "classifications = model.predict(test_images)\n",
+        "\n",
+        "print(classifications[0],'\\n',test_labels[0])\n",
+        "# without normalizing data loss function is higher and "
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Epoch 1/30\n",
+            "1875/1875 [==============================] - 4s 2ms/step - loss: 2.5461\n",
+            "Epoch 2/30\n",
+            "1875/1875 [==============================] - 4s 2ms/step - loss: 0.3893\n",
+            "Epoch 3/30\n",
+            "1875/1875 [==============================] - 3s 2ms/step - loss: 0.2936\n",
+            "Epoch 4/30\n",
+            "1875/1875 [==============================] - 4s 2ms/step - loss: 0.2433\n",
+            "Epoch 5/30\n",
+            "1875/1875 [==============================] - 4s 2ms/step - loss: 0.2302\n",
+            "Epoch 6/30\n",
+            "1875/1875 [==============================] - 4s 2ms/step - loss: 0.2106\n",
+            "Epoch 7/30\n",
+            "1875/1875 [==============================] - 4s 2ms/step - loss: 0.1968\n",
+            "Epoch 8/30\n",
+            "1875/1875 [==============================] - 3s 2ms/step - loss: 0.1904\n",
+            "Epoch 9/30\n",
+            "1875/1875 [==============================] - 4s 2ms/step - loss: 0.1832\n",
+            "Epoch 10/30\n",
+            "1875/1875 [==============================] - 4s 2ms/step - loss: 0.1802\n",
+            "Epoch 11/30\n",
+            "1875/1875 [==============================] - 4s 2ms/step - loss: 0.1747\n",
+            "Epoch 12/30\n",
+            "1875/1875 [==============================] - 3s 2ms/step - loss: 0.1697\n",
+            "Epoch 13/30\n",
+            "1875/1875 [==============================] - 4s 2ms/step - loss: 0.1714\n",
+            "Epoch 14/30\n",
+            "1875/1875 [==============================] - 3s 2ms/step - loss: 0.1611\n",
+            "Epoch 15/30\n",
+            "1875/1875 [==============================] - 4s 2ms/step - loss: 0.1668\n",
+            "Epoch 16/30\n",
+            "1875/1875 [==============================] - 3s 2ms/step - loss: 0.1564\n",
+            "Epoch 17/30\n",
+            "1875/1875 [==============================] - 4s 2ms/step - loss: 0.1567\n",
+            "Epoch 18/30\n",
+            "1875/1875 [==============================] - 4s 2ms/step - loss: 0.1533\n",
+            "Epoch 19/30\n",
+            "1875/1875 [==============================] - 4s 2ms/step - loss: 0.1591\n",
+            "Epoch 20/30\n",
+            "1875/1875 [==============================] - 4s 2ms/step - loss: 0.1448\n",
+            "Epoch 21/30\n",
+            "1875/1875 [==============================] - 4s 2ms/step - loss: 0.1425\n",
+            "Epoch 22/30\n",
+            "1875/1875 [==============================] - 4s 2ms/step - loss: 0.1525\n",
+            "Epoch 23/30\n",
+            "1875/1875 [==============================] - 4s 2ms/step - loss: 0.1489\n",
+            "Epoch 24/30\n",
+            "1875/1875 [==============================] - 4s 2ms/step - loss: 0.1493\n",
+            "Epoch 25/30\n",
+            "1875/1875 [==============================] - 4s 2ms/step - loss: 0.1468\n",
+            "Epoch 26/30\n",
+            "1875/1875 [==============================] - 4s 2ms/step - loss: 0.1486\n",
+            "Epoch 27/30\n",
+            "1875/1875 [==============================] - 3s 2ms/step - loss: 0.1455\n",
+            "Epoch 28/30\n",
+            "1875/1875 [==============================] - 4s 2ms/step - loss: 0.1411\n",
+            "Epoch 29/30\n",
+            "1875/1875 [==============================] - 4s 2ms/step - loss: 0.1342\n",
+            "Epoch 30/30\n",
+            "1875/1875 [==============================] - 4s 2ms/step - loss: 0.1536\n",
+            "313/313 [==============================] - 0s 1ms/step - loss: 0.4213\n",
+            "[0.0000000e+00 2.2068775e-18 4.3873388e-20 6.4986023e-20 1.4383774e-34\n",
+            " 0.0000000e+00 0.0000000e+00 1.0000000e+00 0.0000000e+00 5.5840607e-32] \n",
+            " 7\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "iQ5aQhz1kiUJ"
+      },
+      "source": [
+        "# Exercise 8:\n",
+        "\n",
+        "Earlier when you trained for extra epochs you had an issue where your loss might change. It might have taken a bit of time for you to wait for the training to do that, and you might have throught wouldn'tit be nice if I could stop the trainig when I reach a desired value ? -- i.e. 95% of accuracy might be enough for you, and if you reach that after 3 epochs, why sit around waiting for it to finish a lot more epochs.. So how would you fix that? Like any other program.. you have callbacks."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wB1RSzeQiTGh",
+        "outputId": "0b623afd-1552-4922-b09b-85c218df42b7"
+      },
+      "source": [
+        "class myCallback(tf.keras.callbacks.Callback):\n",
+        "  def on_epoch_end(self, epoch, logs = {}):\n",
+        "    if(logs.get('loss')<.4):\n",
+        "      print('\\nReached 60% accuracy so cancelling training')\n",
+        "      self.model.stop_training = True\n",
+        "  \n",
+        "callbacks = myCallback()\n",
+        "mnist = tf.keras.datasets.fashion_mnist\n",
+        "(training_images, training_labels), (test_images, test_labels) = mnist.load_data()\n",
+        "\n",
+        "training_images = training_images/255.0\n",
+        "test_images = test_images/255.0\n",
+        "\n",
+        "model = tf.keras.models.Sequential([\n",
+        "                                    tf.keras.layers.Flatten(), \n",
+        "                                    tf.keras.layers.Dense(512, activation=tf.nn.relu),\n",
+        "                                    tf.keras.layers.Dense(10,activation=tf.nn.softmax)\n",
+        "])\n",
+        "\n",
+        "model.compile(optimizer = 'adam', loss = 'sparse_categorical_crossentropy')\n",
+        "\n",
+        "model.fit(training_images, training_labels, epochs = 5, callbacks=[callbacks])"
+      ],
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Epoch 1/5\n",
+            "1875/1875 [==============================] - 7s 3ms/step - loss: 0.4763\n",
+            "Epoch 2/5\n",
+            "1875/1875 [==============================] - 7s 4ms/step - loss: 0.3606\n",
+            "\n",
+            "Reached 60% accuracy so cancelling training\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tensorflow.python.keras.callbacks.History at 0x7ff198b79dd0>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8b2jVVSUnM8S"
       },
       "source": [
         ""
